refactored to be more easily configured